# EdgeCube

./: .gitignore  README.md  pubspec.yaml
android/: .gitignore  gradle.properties
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/runtimes/frpc/: version
android/app/src/main/cpp/: CMakeLists.txt  ecpty.c  frpcloader.c  launcher.c  phploader.c  tagfix.c  tsrm_cache.c
android/app/src/main/jniLibs/: README.md
android/app/src/main/kotlin/com/venti1112/edgecube/: MainActivity.kt
android/app/src/main/kotlin/com/venti1112/edgecube/files/: ArchiveExtractor.kt
android/app/src/main/kotlin/com/venti1112/edgecube/ftp/: FtpServerManager.kt
android/app/src/main/kotlin/com/venti1112/edgecube/server/: EcPackage.kt  EcPty.kt  JreLayout.kt  RuntimeInstaller.kt  ServerProcessManager.kt  ServerService.kt  TunnelProcessManager.kt
android/app/src/main/kotlin/com/venti1112/edgecube/shell/: ShellCommandRunner.kt  ShellProcessManager.kt  ShellResolver.kt
android/app/src/main/kotlin/com/venti1112/edgecube/ssh/: EcPtyInvertedShell.kt  SshServerManager.kt
android/app/src/main/kotlin/com/venti1112/edgecube/update/: ApkInstaller.kt
android/app/src/main/res/xml/: file_paths.xml  network_security_config.xml
assets/i18n/: en_US.json  index.json  zh_CN.json
assets/markdown/: user_agreement.md
lib/: home_shell.dart  main.dart  route_observer.dart
lib/account/: account_controller.dart  account_models.dart  account_scope.dart  account_service.dart
lib/config/: account_store.dart  config_migration.dart  config_store.dart  ftp_store.dart  instance_path_store.dart  locale_store.dart  mcp_store.dart  network_store.dart  ssh_store.dart  terminal_store.dart  user_agreement_store.dart  version_store.dart
lib/files/: archive_service.dart  code_find_panel.dart  editor_language.dart  file_browser.dart  file_entry.dart  file_service.dart  folder_picker.dart  photo_picker.dart  storage_permission.dart  system_picker.dart  text_editor_page.dart
lib/ftp/: ftp_controller.dart  ftp_scope.dart  ftp_service.dart
lib/i18n/: app_language.dart  i18n_service.dart  locale_controller.dart  locale_scope.dart  translations.dart
lib/instance/: create_instance_page.dart  instance.dart  instance_controller.dart  instance_migration.dart  instance_scope.dart  instance_store.dart
lib/mcp/: mcp_controller.dart  mcp_scope.dart  mcp_service.dart  mcp_tools.dart
lib/mods/: download_queue.dart  icon_cache.dart  mod_metadata.dart  modpack_service.dart  modrinth_service.dart
lib/net/: msl_mirror.dart  network_address.dart
lib/online/: cloud_headers.dart  error_report_service.dart  online_service.dart  update_service.dart
lib/pages/: about_page.dart  account_page.dart  account_verify_page.dart  appearance_settings_page.dart  console_page.dart  files_page.dart  ftp_page.dart  instance_export_page.dart  language_settings_page.dart  manage_page.dart  mcp_page.dart  mod_download_page.dart  mods_plugins_page.dart  network_settings_page.dart  online_services_page.dart  players_page.dart  pnx_properties_page.dart  port_mapping_page.dart  runtime_page.dart  server_icon_crop_page.dart  server_page.dart  server_properties_page.dart  settings_page.dart  shell_page.dart  ssh_page.dart  storage_management_page.dart
lib/server/: ecpkg_handler.dart  pnx_properties.dart  power_service.dart  runtime_migration.dart  runtime_service.dart  runtime_update_service.dart  server_controller.dart  server_properties.dart  server_scope.dart  server_service.dart  system_monitor_controller.dart  system_monitor_scope.dart  system_monitor_service.dart  upnp_service.dart
lib/shell/: shell_controller.dart  shell_scope.dart  shell_service.dart
lib/ssh/: ssh_controller.dart  ssh_scope.dart  ssh_service.dart
lib/theme/: precipitation_effect_mode.dart  theme_scope.dart  theme_store.dart
lib/tunnel/: tunnel_service.dart
lib/widgets/: open_source_notice_dialog.dart  placeholder_page.dart  precipitation_overlay.dart  snowfall_overlay.dart  terminal_zoom.dart  update_dialog.dart  user_agreement_dialog.dart
test/: widget_test.dart
tool/: merge_i18n.dart
